--- a/layout.css
+++ b/layout.css
@@ -94,3 +94,27 @@ h2 {
     font-size: 20px;
     font-family: roboto-bold, roboto, sans-serif;
 }
+
+.image-grid-container {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    justify-content: space-between;
+    align-items: center;
+    object-fit: cover;
+    grid-gap: 5px;
+}
+
+.grid-image {
+    width: 100%;
+    height: 100%;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.grid-text {
+    text-align:center;
+    font-size: 16px;
+    font-family: roboto-bold, roboto, sans-serif;
+    padding-bottom: 20px;
+}
