--- a/layout.css
+++ b/layout.css
@@ -118,3 +118,8 @@ h2 {
     font-family: roboto-bold, roboto, sans-serif;
     padding-bottom: 20px;
 }
+
+.more-info-links {
+    font-size: 16px;
+    font-family: roboto-bold, roboto, sans-serif;
+}
